[package]
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
description = "An unofficial crate to query publicly accessible API methods for Dresden's public transport system."
documentation = "https://docs.rs/dvb/"
license = "MIT/Apache-2.0"
name = "dvb"
version = "0.4.0"
edition = "2018"

[dependencies]
regex = "1.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
num-integer = "0.1"
pretty_assertions = "1.3"

[dependencies.reqwest]
version = "0.11"
features = ["json", "blocking"]

[dependencies.chrono]
version = "0.4"
default_features = false
features = ["clock", "std", "serde"]
