[package]
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
description = "An unofficial crate to query publicly accessible API methods for Dresden's public transport system."
documentation = "https://docs.rs/dvb/"
repository = "https://github.com/hoodie/dvb-rs"
license = "MIT/Apache-2.0"
name = "dvb"
version = "0.8.0"
edition = "2024"

[features]
default = []
iso8601-serialization = []

[dependencies]
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-integer = "0.1"
pretty_assertions = "1.4"
schemars = { version = "1.1", features = ["chrono04"]}

[dependencies.reqwest]
version = "0.12"
features = ["json", "blocking"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std", "serde"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
